# sphinx-hwreg

./: .gitignore  README.md  pyproject.toml
sphinx-hwreg/: hardware_registers.py
sphinx_hwreg/: _renderer.py  _yaml_model.py  hardware_registers.py
sphix-hwreg/: hardware_registers.py
