[build-system]
requires=["setuptools", "setuptools-scm"]
build-backend="setuptools.build_meta"

[project]
name="sphinx-hwreg"
description="Sphinx extension to visualize hardware registers"
readme="README.md"
requires-python=">=3.9"
license={text="MIT"}
dependencies=[
  "sphinx>=5",
  "pyyaml"
]
dynamic=["version"]

[tool.setuptools_scm]
write_to="sphinx_hwreg/_version.py"
